fix: add words populating to userWords endpoint
