# src/resources/userWords/userWord.db.repository.js
@@ -5,8 +5,14 @@ const MONGO_ENTITY_EXISTS_ERROR_CODE = 11000;
 
 const getAll = async userId => UserWord.find({ userId });
 
+const getAllByPage = async (userId, page, wordsPerPage) =>
+  UserWord.find({ userId })
+    .populate({ path: 'word' })
+    .skip(page * wordsPerPage)
+    .limit(wordsPerPage);
+
 const get = async (wordId, userId) => {
-  const userWord = await UserWord.findOne({ wordId, userId });
+  const userWord = await UserWord.findOne({ wordId, userId }).populate('word');
   if (!userWord) {
     throw new NOT_FOUND_ERROR(ENTITY_NAME, { wordId, userId });
   }
@@ -16,7 +22,7 @@ const get = async (wordId, userId) => {
 
 const save = async (wordId, userId, userWord) => {
   try {
-    return await UserWord.create(userWord);
+    return await UserWord.create({ ...userWord, word: wordId });
   } catch (err) {
     if (err.code === MONGO_ENTITY_EXISTS_ERROR_CODE) {
       throw new ENTITY_EXISTS(`such ${ENTITY_NAME} already exists`);
@@ -35,4 +41,4 @@ const update = async (wordId, userId, userWord) =>
 
 const remove = async (wordId, userId) => UserWord.deleteOne({ wordId, userId });
 
-module.exports = { getAll, get, save, update, remove };
+module.exports = { getAll, getAllByPage, get, save, update, remove };
