# src/resources/userWords/userWord.service.js
@@ -1,6 +1,8 @@
 const wordRepo = require('./userWord.db.repository');
 
 const getAll = async userId => wordRepo.getAll(userId);
+const getAllByPage = async (userId, page, wordsPerPage) =>
+  wordRepo.getAllByPage(userId, page, wordsPerPage);
 
 const get = async (wordId, userId) => wordRepo.get(wordId, userId);
 
@@ -12,4 +14,4 @@ const update = async (wordId, userId, userWord) =>
 
 const remove = async (wordId, userId) => wordRepo.remove(wordId, userId);
 
-module.exports = { getAll, get, save, update, remove };
+module.exports = { getAll, getAllByPage, get, save, update, remove };
